[package]
name = "broth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html-escape = "0.2.13"
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.15.0"
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1.2"
# serde_json = "1.0"
# serde = { version = "1.0", features = ["derive"] }